--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faiz-portfolio",
-  "homepage": "https://faiz1004.github.io/faiz-portfolio",
+  "homepage": "https://faiz1004.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
